# Project-Ram-Crisis

./: .agent.md  .gitignore  LICENSE  README.md  SKILL.md  TODO.md  ram-compression-engine.SKILL.md  ram-cpu-co-optimization-engine.SKILL.md  ram-cross-process-sharing-engine.SKILL.md  ram-layout-fragmentation-engine.SKILL.md  ram-os-integration-engine.SKILL.md  ram-performance-simulation-engine.SKILL.md  ram-predictive-eviction-engine.SKILL.md  ram-profiling-telemetry-engine.SKILL.md  ram-safety-isolation-engine.SKILL.md  ram-storage-tiering-engine.SKILL.md  vram-cache-engine.SKILL.md
.github/workflows/: windows-ci.yml
docs/: architecture.md  cow_interception.md  release.md  safety_review.md  vision.md
driver/: README.md  create_signed_package.ps1  deduper.cpp  deduper.h  install_driver.ps1  package_driver.ps1  ram_dedupe.inf  ram_dedupe.vcxproj  sign_driver.ps1  uninstall_driver.ps1
user/: CMakeLists.txt  README.md  benchmark.cpp  controller.cpp  dedupe_engine.cpp  dedupe_engine.h  dedupe_simulator.cpp  driver_benchmark.cpp  driver_test.cpp  ml_predictor.cpp  ml_predictor.h  process_state.h  scan_scheduler.cpp  scan_scheduler.h  test_engine.cpp
