cmake_minimum_required(VERSION 3.15)
project(ram_dedupe_prototype LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(dedupe_simulator dedupe_simulator.cpp dedupe_engine.cpp ml_predictor.cpp scan_scheduler.cpp)
add_executable(dedupe_engine_tests test_engine.cpp dedupe_engine.cpp)
add_executable(dedupe_controller controller.cpp)
add_executable(dedupe_benchmark benchmark.cpp)
add_executable(dedupe_driver_benchmark driver_benchmark.cpp)
add_executable(dedupe_driver_test driver_test.cpp)

if (MSVC)
    target_compile_options(dedupe_controller PRIVATE /W4 /WX)
    target_compile_options(dedupe_benchmark PRIVATE /W4 /WX)
    target_compile_options(dedupe_driver_benchmark PRIVATE /W4 /WX)
else()
    target_compile_options(dedupe_controller PRIVATE -Wall -Wextra -Wpedantic -Werror)
    target_compile_options(dedupe_benchmark PRIVATE -Wall -Wextra -Wpedantic -Werror)
    target_compile_options(dedupe_driver_benchmark PRIVATE -Wall -Wextra -Wpedantic -Werror)
endif()

if (MSVC)
    target_compile_options(dedupe_simulator PRIVATE /W4 /WX)
    target_compile_options(dedupe_engine_tests PRIVATE /W4 /WX)
    target_compile_options(dedupe_driver_test PRIVATE /W4 /WX)
else()
    target_compile_options(dedupe_simulator PRIVATE -Wall -Wextra -Wpedantic -Werror)
    target_compile_options(dedupe_engine_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
    target_compile_options(dedupe_driver_test PRIVATE -Wall -Wextra -Wpedantic -Werror)
endif()
